--- a/WebAppCoreMvcLogin/Properties/launchSettings.json
+++ b/WebAppCoreMvcLogin/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:57524/",
+      "applicationUrl": "http://localhost:57029/",
       "sslPort": 0
     }
   },
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WebAppCoreEmpty": {
+    "WebAppCoreMvcLogin": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:57525"
+      "applicationUrl": "http://localhost:57030"
     }
   }
 }
