Re-added mvc login project.

--- a/WebAppCoreMvcLogin/appsettings.json
+++ b/WebAppCoreMvcLogin/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebAppCoreMvcLogin-11e780ca-4754-44dd-810f-c9458d7987de;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
