--- a/WebAppCoreEmpty/WebAppCoreEmpty.csproj
+++ b/WebAppCoreEmpty/WebAppCoreEmpty.csproj
@@ -26,9 +26,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Data\" />
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
+    <Folder Include="Models\AccountViewModels\" />
+    <Folder Include="Models\ManageViewModels\" />
     <Folder Include="Views\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\lib\" />
